--- a/project-blog-spa/src/app.css
+++ b/project-blog-spa/src/app.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @source "../index.html";
-@source "./**/*.js,ts,viand}";
+@source "./**/*.{js,ts,viand}";
 
 @theme {
   --color-brand: #3b82f6;
